Support ancestor/descendant clade search on /families.
